[project]
name = "support-agent-env"
version = "0.1.0"
description = "ScalerX Support Agent OpenEnv Submission"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "requests",
    "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
