[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "support-agent-env"
version = "0.1.0"
description = "ScalerX Support Agent OpenEnv Submission"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "requests",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
